--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
     <div class="container">
         <div class="row">
           <style>
+            .hidden_item {
+              display: none !important; /* Masquer les éléments par défaut */
+            }
               .custom-solutions-box {
                 background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
                 color: #fff;
@@ -822,7 +825,7 @@
   <div class="software-categories">
     <div class="category-card">
       <div class="software-image">
-        <img src="assets/img/slides/refine/slide1_.jpg" alt="Restaurant POS System">
+        <img src="assets/img/web-design.jpg" alt="Restaurant POS System">
       </div>
       <div class="software-list">
         <div class="software-item">
@@ -837,7 +840,7 @@
             <li>Comptabilité et reporting journalier</li>
             <li>Intégration avec les imprimantes de cuisine</li>
           </ul>
-          <div class="software-links">
+          <div class="software-links hidden_item">
             <a href="https://restaurantdemo.kotech.com" class="software-link demo-link" target="_blank">
               <i class="fas fa-play-circle" style="margin-right:5px"></i> <span>Démo live</span>
             </a>
@@ -851,7 +854,7 @@
 
     <div class="category-card">
       <div class="software-image">
-        <img src="assets/img/slides/refine/slide1_.jpg" alt="Point of Sale for Shops">
+        <img src="assets/img/web-design.jpg" alt="Point of Sale for Shops">
       </div>
       <div class="software-list">
         <div class="software-item">
@@ -866,7 +869,7 @@
             <li>Gestion des clients et fiches articles</li>
             <li>Statistiques de ventes et reporting</li>
           </ul>
-          <div class="software-links">
+          <div class="software-links hidden_item">
             <a href="https://shopdemo.kotech.com" class="software-link demo-link" target="_blank">
               <i class="fas fa-play-circle" style="margin-right:5px"></i> <span>Démo live</span>
             </a>
@@ -880,7 +883,7 @@
 
     <div class="category-card">
       <div class="software-image">
-        <img src="assets/img/slides/refine/slide1_.jpg" alt="Gestion OAE WinDev">
+        <img src="assets/img/web-design.jpg" alt="Gestion OAE WinDev">
       </div>
       <div class="software-list">
         <div class="software-item">
@@ -896,7 +899,7 @@
             <li> Reporting analytique intégré</li>
             <li> Traçabilité complète des actions</li>
           </ul>
-          <div class="software-links">
+          <div class="software-links hidden_item">
             <a href="https://shopdemo.kotech.com" class="software-link demo-link" target="_blank">
               <i class="fas fa-play-circle" style="margin-right:5px"></i> <span>Démo live</span>
             </a>
@@ -928,7 +931,7 @@
 
     <div class="category-card">
       <div class="software-image">
-        <img src="assets/img/slides/refine/slide1_.jpg" alt="Motema Dating App">
+        <img src="assets/img/web-design.jpg" alt="Motema Dating App">
       </div>
       <div class="software-list">
         <div class="software-item">
@@ -945,7 +948,7 @@
             <li> Rencontres géolocalisées</li>
             <li> Mode premium avec fonctionnalités exclusives</li>
           </ul>
-          <div class="software-links">
+          <div class="software-links hidden_item">
             <a href="https://shopdemo.kotech.com" class="software-link demo-link" target="_blank">
               <i class="fas fa-play-circle" style="margin-right:5px"></i> <span>Démo live</span>
             </a>
@@ -997,7 +1000,7 @@
 
     <div class="category-card">
       <div class="software-image">
-        <img src="assets/img/slides/refine/slide1_.jpg" alt="CyberShield Security">
+        <img src="assets/img/web-design.jpg" alt="CyberShield Security">
       </div>
       <div class="software-list">
         <div class="software-item">
@@ -1014,7 +1017,7 @@
             <li> Analyse des vulnérabilités</li>
             <li> Conformité RGPD & ISO 27001</li>
           </ul>
-          <div class="software-links">
+          <div class="software-links hidden_item">
             <a href="https://docs.cybershield.sec" class="software-link docs-link" target="_blank">
               <i class="fas fa-book-open" style="margin-right:5px"></i> <span>Documentation</span>
             </a>
@@ -1060,7 +1063,7 @@
 
     <div class="category-card">
       <div class="software-image">
-        <img src="assets/img/slides/refine/slide1_.jpg" alt="TechFormation">
+        <img src="assets/img/web-design.jpg" alt="TechFormation">
       </div>
       <div class="software-list">
         <div class="software-item">
@@ -1076,7 +1079,7 @@
             <li><strong>CyberSécurité</strong> : Pentesting, forensic, sécurité réseau</li>
           </ul>
 
-          <div class="software-links">
+          <div class="software-links hidden_item">
             <a href="https://wa.me/242068323905" class="software-link docs-link" target="_blank">
               <i class="fas fa-book" style="margin-right:5px"></i> </span>Formation à la demande</span>
             </a>
@@ -1146,7 +1149,7 @@
             <h3>GESTMUT</h3>
             <p>Application de gestion complète des opérations mutualistes : adhésions, cotisations, remboursements et rapports automatisés.
               Déployée avec succès au sein de la societé Crédit du Congo.</p>
-            <a href="#" class="project-link">Voir le cas client</a>
+            <a href="#" class="project-link hidden_item">Voir le cas client</a>
           </div>
         </div>
 
@@ -1160,7 +1163,7 @@
             <h3>Gestion Booking</h3>
             <p>Application de gestion des réservations de conteneurs, avec suivi des demandes, planification et historique des mouvements.
               Déployée avec succès auprès de la société Transko.</p>
-            <a href="#" class="project-link">Voir le cas client</a>
+            <a href="#" class="project-link hidden_item">Voir le cas client</a>
           </div>
         </div>
 
@@ -1174,21 +1177,21 @@
             <h3>GED</h3>
             <p>Application de gestion électronique des archives, permettant le classement, la recherche et le suivi sécurisé des documents.
               Déployée avec succès au sein de l’entreprise Marcopera.</p>
-            <a href="#" class="project-link">Voir le cas client</a>
+            <a href="#" class="project-link hidden_item">Voir le cas client</a>
           </div>
         </div>
 
         <!-- Projet 6 -->
         <div class="project-card">
           <div class="project-image">
-            <img src="assets/img/slides/refine/solution.jpg" alt="CyberShield">
+            <img src="assets/img/web-design.jpg" alt="CyberShield">
             <div class="project-badge">Logiciel</div>
           </div>
           <div class="project-content">
             <h3>Caisse-Marco</h3>
             <p>Application de gestion de caisse intuitive pour le suivi des encaissements, éditions de tickets et rapports de vente.
               Déployée avec succès au sein de l’entreprise Marcopera.</p>
-            <a href="#" class="project-link">Voir le cas client</a>
+            <a href="#" class="project-link hidden_item">Voir le cas client</a>
           </div>
         </div>
 
@@ -1346,7 +1349,7 @@
 
 
   <section class="news-section" id="Actualites">
-    <div class="container">
+    <div class="container-fluid">
       <h2 class="section-title">Actualités</h2>
       <p class="section-subtitle">Restez informé de nos dernières nouveautés et événements</p>
 
@@ -1354,17 +1357,17 @@
         <!-- Article 1 -->
         <article class="news-card">
           <div class="news-media">
-            <img src="https://images.unsplash.com/photo-1593642634524-b40b5baae6bb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Nouvelle version KOCaisse">
+            <img src="https://images.unsplash.com/photo-1607252650355-f7fd0460ccdb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Nouvelle version KOCaisse">
             <div class="news-date">
-              <span class="date-day">15</span>
-              <span class="date-month">Juin</span>
+              <span class="date-day">26</span>
+              <span class="date-month">Juillet</span>
               <span class="date-year">2025</span>
             </div>
           </div>
           <div class="news-content">
-            <h3>Sortie de KOCaisse-Resto v3.5</h3>
-            <p>Nouveaux modules de gestion des stocks et intégration avec les plateformes de livraison. Découvrez les améliorations...</p>
-            <a href="#" class="news-link">Lire l'article </a>
+            <h3>Sortie officiel de Motema</h3>
+            <p>Après des mois de développement et de passion, nous sommes fiers de vous annoncer le lancement officiel de Motema, votre nouvelle application de rencontre pensée pour créer des liens authentiques et sincères.</p>
+            <a href="#" class="news-link hidden_item">Lire l'article </a>
           </div>
         </article>
 
@@ -1376,32 +1379,33 @@
               <div class="play-icon">▶</div>
             </div>
             <div class="news-date">
-              <span class="date-day">28</span>
-              <span class="date-month">Juillet</span>
+              <span class="date-day">09</span>
+              <span class="date-month">Août</span>
               <span class="date-year">2025</span>
             </div>
           </div>
           <div class="news-content">
-            <h3>Conférence sur la cybersécurité</h3>
-            <p>Retour en vidéo sur notre participation au salon TechForSecure avec des ateliers pratiques sur les bonnes...</p>
-            <a href="#" class="news-link">Voir la vidéo </a>
+            <h3>Atelier de formation sur les bases de la sécurité informatique</h3>
+            <p>Nous sommes ravis de vous annoncer la programmation prochaine d'un atelier en ligne dédié aux fondamentaux de la sécurité informatique....</p>
+            <a href="#" class="news-link hidden_item">Voir la vidéo </a>
           </div>
         </article>
 
         <!-- Article 3 -->
         <article class="news-card">
           <div class="news-media">
-            <img src="https://images.unsplash.com/photo-1607252650355-f7fd0460ccdb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Certification ISO">
+            <img src="assets/img/sortie_lacruche_web.png" alt="Certification ISO">
             <div class="news-date">
-              <span class="date-day">10</span>
+              <span class="date-day">16</span>
               <span class="date-month">Aout</span>
               <span class="date-year">2025</span>
             </div>
           </div>
           <div class="news-content">
-            <h3>Certification ISO 27001</h3>
-            <p>Nous sommes fiers d'annoncer l'obtention de la certification sécurité pour nos solutions. Découvrez ce que cela...</p>
-            <a href="#" class="news-link">En savoir plus </a>
+            <h3>Sortie officielle de La Cruche – Version Web</h3>
+            <p>
+              Profitez désormais de toutes les fonctionnalités de La Cruche directement depuis votre navigateur, avec une interface simple, rapide et sécurisée.</p>
+            <a href="#" class="news-link hidden_item">En savoir plus </a>
           </div>
         </article>
       </div>
